# newsletter

./: .dockerignore  .env.example  .gitignore  .mcp-config.example.json  Dockerfile  README.md  pyproject.toml  requirements.txt
Docs/: API_Reference.md  Basic_ Info.md  CLI_Usage.md  Development.md  MCP_Usage.md  Project_Info.md  Setup.md
output/: events.csv  events.json  newsletter.html
src/eventbrite_extractor/: __init__.py  client.py  config.py  export.py  extract_events.py  mcp_main.py  mcp_server.py  models.py  render.py  transform.py
src/eventbrite_extractor/templates/: newsletter.html
tests/: test_client.py  test_export.py  test_models.py  test_render.py  test_transform.py
